samples/_failures_safe/1761334110_adfe06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09048462.c: In function ‘main’:
./samples/SAFE/__tmp_09048462.c:149: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_09048462.c:148:5: error: expected declaration or statement at end of input
  148 |     if
      |     ^~
